fixed recipe z-index issue

--- a/src/components/Mixer.scss
+++ b/src/components/Mixer.scss
@@ -293,6 +293,7 @@
         top: 1.3rem;
         user-select: none;
         cursor: pointer;
+        z-index: 4;
 
         .recipe-list {
             width: 100%;
